--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "repeater-app",
+  "name": "repeater-app-enhanced",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@contentful/app-scripts": "^0.8.33",
-    "@contentful/app-sdk": "^3.32.0",
-    "@contentful/field-editor-single-line": "^0.13.1",
+    "@contentful/app-scripts": "1.19.0",
+    "@contentful/app-sdk": "^4.25.0",
+    "@contentful/field-editor-single-line": "^1.13.1",
     "@contentful/field-editor-test-utils": "^0.9.0",
     "@contentful/forma-36-fcss": "^0.3.0",
-    "@contentful/forma-36-react-components": "^3.78.2",
-    "@contentful/forma-36-tokens": "^0.10.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
+    "@contentful/forma-36-react-components": "4.64.0",
+    "@contentful/forma-36-tokens": "4.0.5",
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "cross-env": "^7.0.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "typescript": "^4.1.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
     "uuid": "^8.3.2"
   },
   "scripts": {
@@ -29,6 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "create-app-definition": "contentful-app-scripts create-app-definition",
     "upload": "contentful-app-scripts upload --bundle-dir ./build",
     "upload-ci": "contentful-app-scripts upload --ci --bundle-dir ./build --organization-id $CONTENTFUL_ORG_ID --definition-id $CONTENTFUL_APP_DEF_ID --token $CONTENTFUL_ACCESS_TOKEN"
   },
@@ -49,6 +44,12 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.0"
+    "@types/uuid": "^8.3.0",
+    "typescript": "4.9.5",
+    "@types/node": "16.18.96",
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "14.3.1",
+    "@types/react": "18.2.79",
+    "@types/react-dom": "18.2.25"
   }
 }
