Add drag and drop sorting

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@contentful/app-scripts": "1.19.0",
     "@contentful/app-sdk": "^4.25.0",
-    "@contentful/field-editor-single-line": "^1.13.1",
+    "@contentful/field-editor-single-line": "1.4.1",
+    "@contentful/field-editor-tags": "1.4.15",
     "@contentful/field-editor-test-utils": "^0.9.0",
-    "@contentful/forma-36-fcss": "^0.3.0",
-    "@contentful/forma-36-react-components": "4.64.0",
-    "@contentful/forma-36-tokens": "4.0.5",
+    "@contentful/f36-icons": "^4.28.2",
+    "@contentful/f36-components": "4.66.0",
+    "@contentful/f36-entity-list": "4.66.0",
+    "@contentful/f36-tokens": "4.0.5",
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
     "cross-env": "^7.0.3",
@@ -20,7 +22,7 @@
   },
   "scripts": {
     "start": "cross-env BROWSER=none react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "create-app-definition": "contentful-app-scripts create-app-definition",
@@ -44,12 +46,12 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.0",
-    "typescript": "4.9.5",
-    "@types/node": "16.18.96",
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "14.3.1",
+    "@types/node": "16.18.96",
     "@types/react": "18.2.79",
-    "@types/react-dom": "18.2.25"
+    "@types/react-dom": "18.2.25",
+    "@types/uuid": "^8.3.0",
+    "typescript": "4.9.5"
   }
 }
