Add conditional toggle

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "@contentful/app-scripts": "1.19.0",
     "@contentful/app-sdk": "^4.25.0",
-    "@contentful/field-editor-single-line": "1.4.1",
+    "@contentful/f36-components": "4.67.3",
+    "@contentful/f36-icons": "^4.29.0",
+    "@contentful/f36-tokens": "4.0.5",
+    "@contentful/field-editor-boolean": "^1.4.15",
+    "@contentful/field-editor-single-line": "1.4.2",
     "@contentful/field-editor-tags": "1.4.15",
     "@contentful/field-editor-test-utils": "^0.9.0",
-    "@contentful/f36-icons": "^4.28.2",
-    "@contentful/f36-components": "4.66.0",
-    "@contentful/f36-entity-list": "4.66.0",
-    "@contentful/f36-tokens": "4.0.5",
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
     "cross-env": "^7.0.3",
